* Remove mirage-xen.pc file on uninstall

2.1.2 (20-Dec-2014):

[xen] Updated headers and build for Mini-OS 0.5.  This involves:

* Require libminios >= 0.5
* Remove old includes directory when installing
* Compile with `-fno-builtin` (avoids warnings about standard functions)
* Removed `complex.h` (now provided by Openlibm)
* Include `cdefs.h` from `types.h` (needed for `__BEGIN_DECLS`)
* Removed open from `unistd.h` (comes from `fcntl.h`)
* Removed `assert.h` and `__assert_fail` (provided by Mini-OS)
* Removed `string.h` (provided by Mini-OS)
* Removed `cdefs.h` (provided by Mini-OS)
* Added missing `console.h` includes (for `printk`)

2.1.1 (17-Dec-2014):
* Remove checksum stubs from Unix and Xen, as they are provided by `tcpip` now.
* [xen] Define UINTx_MAX and SIZE_MAX in stdint.h

2.1.0 (07-Dec-2014):
* [xen] Report trace events for GC, block_domain, XenStore and event channels.
  This introduces a new dependency on the `mirage-profile` package.
* [xen] Install a `pkg-config` file to allow other projects to compile C stubs
  against `mirage-xen`.
* [xen] Remove duplication of OCaml header files inside the `include` tree.

2.0.1 (05-Dec-2014):
* [xen] Assert that pages passed to the grant share API are page-aligned.
  This always happens if they are created via `Io_page.create`, and
  probably not true if made by `Cstruct.create`.
* [xen] Use monotonic time for timing events, not wall-clock time.
* [xen] Provide functions that C code often uses for asserts (`abort`,
  `printf`, etc).

2.0.0 (04-Nov-2014):
* Remove dietlibc, libm and most of the include files, replacing them with
  external dependencies on Mini-OS and openlibm.
* Introduce Xen/ARM support that works with both Xen 4.4 and the 4.5dev
  hypervisor ABI.  Testing on Cubieboard2 and Cubietruck devices.
* [xen] Move the Xen main Lwt loop into OCaml code to simplify it (#99).
* Build fixes to work with multiple findlib directories in a single
  installation (#101 from Petter Urkedal).